<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">走走看看</string>
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">kcal</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="cancel">消零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="inform_title">说明</string>
    <string name="star_infrom">每走一千步获得一颗星。</string>
    <string name="step_example_inform">绿色区域为放置手机的最值位置。请妥当放置手机，以避免意外滑落。</string>
    <string name="understand">知道了</string>
    <string name="step_number_inform">因是监听单脚运动，第一步记步为1，此后每两步更新一次当前步数。</string>
    <string name="power_inform">开始计步后，为保持传感器持续工作，请勿使用电源和主屏幕键，请您放心，程序会自动关闭屏幕，以节省电能。</string>

</resources>