<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_config_bkg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dip"
        android:text="@string/inform_title"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:contentDescription="@string/todo"
            android:src="@drawable/power_inform" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3.0"
            android:paddingLeft="5dip"
            android:paddingRight="25dip"
            android:text="@string/power_inform"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:contentDescription="@string/todo"
            android:src="@drawable/step_number" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3.0"
            android:paddingLeft="5dip"
            android:paddingRight="25dip"
            android:text="@string/step_number_inform"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:contentDescription="@string/todo"
            android:src="@drawable/img_star" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:paddingLeft="5dip"
            android:text="@string/star_infrom"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:contentDescription="@string/todo"
            android:src="@drawable/step_example" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3.0"
            android:paddingLeft="5dip"
            android:paddingRight="25dip"
            android:text="@string/step_example_inform"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@id/btn_understand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/btn_bg"
        android:onClick="onClick"
        android:padding="5dip"
        android:text="@string/understand"
        android:textColor="@android:color/white" />

</LinearLayout>